// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`augmentData A repoCheckerPath 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": true,
  "isModule": false,
  "isPublishedPackage": true,
  "isQuiet": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": true,
  "isUsingEslint": true,
  "isUsingNyc": false,
  "isUsingShuutils": true,
  "isUsingTailwind": false,
  "isUsingTypescript": true,
  "isUsingV8": true,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "repo-check",
  "repoId": "repo-checker",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`augmentData A repoCheckerPath with local 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": true,
  "isModule": false,
  "isPublishedPackage": true,
  "isQuiet": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": true,
  "isUsingEslint": true,
  "isUsingNyc": false,
  "isUsingShuutils": true,
  "isUsingTailwind": false,
  "isUsingTypescript": true,
  "isUsingV8": true,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 70,
  "packageName": "repo-check",
  "repoId": "repo-checker",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`augmentData B vueProjectFolder 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingNyc": false,
  "isUsingShuutils": false,
  "isUsingTailwind": true,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVue": true,
  "isWebPublished": true,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "name",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Kevin_Malone",
  "userIdLowercase": "kevin_malone",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`augmentData B vueProjectFolder with local 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingNyc": false,
  "isUsingShuutils": false,
  "isUsingTailwind": true,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVue": true,
  "isWebPublished": true,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "name",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Kevin_Malone",
  "userIdLowercase": "kevin_malone",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`augmentData C tsProjectFolder 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": true,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingNyc": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": true,
  "isUsingV8": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "MIT",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Michael Scott-Junior",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`augmentData C tsProjectFolder with local 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": true,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingNyc": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": true,
  "isUsingV8": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "MIT",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "a-great-repo",
  "shouldAvoidSass": false,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Dwight Schrute",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`augmentData D testFolder 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingNyc": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`augmentData D testFolder with local 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingNyc": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`augmentDataWithGit A repoCheckerPath 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingNyc": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "repo-checker",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`augmentDataWithGit B vueProjectFolder 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingNyc": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`augmentDataWithGit C tsProjectFolder 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingNyc": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`augmentDataWithGit D testFolder 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingNyc": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`augmentDataWithPackageJson A repoCheckerPath 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": true,
  "isModule": false,
  "isPublishedPackage": true,
  "isQuiet": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": true,
  "isUsingEslint": true,
  "isUsingNyc": false,
  "isUsingShuutils": true,
  "isUsingTailwind": false,
  "isUsingTypescript": true,
  "isUsingV8": true,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "repo-check",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`augmentDataWithPackageJson B vueProjectFolder 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingNyc": false,
  "isUsingShuutils": false,
  "isUsingTailwind": true,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVue": true,
  "isWebPublished": true,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "name",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Kevin_Malone",
  "userIdLowercase": "kevin_malone",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`augmentDataWithPackageJson C tsProjectFolder 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": true,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingNyc": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": true,
  "isUsingV8": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "MIT",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Michael Scott-Junior",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`augmentDataWithPackageJson D testFolder 1`] = `
ProjectData {
  "canAutoMergeDeps": true,
  "hasMainBranch": false,
  "hasTaskPrefix": false,
  "isModule": false,
  "isPublishedPackage": false,
  "isQuiet": false,
  "isUsingC8": false,
  "isUsingDependencyCruiser": false,
  "isUsingEslint": false,
  "isUsingNyc": false,
  "isUsingShuutils": false,
  "isUsingTailwind": false,
  "isUsingTypescript": false,
  "isUsingV8": false,
  "isUsingVue": false,
  "isWebPublished": false,
  "license": "GPL-3.0",
  "maxSizeKo": 1,
  "packageName": "",
  "repoId": "a-great-repo",
  "shouldAvoidSass": true,
  "userId": "Shuunen",
  "userIdLowercase": "shuunen",
  "userMail": "romain.racamier@gmail.com",
  "userName": "Romain Racamier-Lafon",
  "webUrl": "https://my-website.com",
  "willGenerateReport": true,
}
`;

exports[`objectToJson A nothing to sort 1`] = `
"{
  "keyA": "A"
}"
`;

exports[`objectToJson B already sorted 1`] = `
"{
  "keyA": "A",
  "keyB": "B"
}"
`;

exports[`objectToJson C sort 1`] = `
"{
  "keyA": "A",
  "keyB": "B"
}"
`;
